plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'be.like.water'
    compileSdk 36

    defaultConfig {
        applicationId "be.like.water"
        minSdk 25
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    implementation 'org.tukaani:xz:1.9'
    implementation("com.squareup.okhttp3:okhttp:4.11.0") // 最新稳定版本
    implementation("com.squareup.okio:okio:3.6.0")     // 用于流处理，可选
}